# deep-learning-from-scratch-4

./: pyproject.toml
notebooks/: 09_policy_gradient.ipynb
src/deep_learning_from_scratch_4/ch01/: avg.py  bandit.py  bandit_avg.py  non_stationary.py
src/deep_learning_from_scratch_4/ch02/: stuff.ipynb
src/deep_learning_from_scratch_4/ch04/: dp.ipynb  gridworld.py  gridworld_play.py  policy_eval.py  policy_iter.py  value_iter.py
src/deep_learning_from_scratch_4/ch05/: dice.ipynb  importance_sampling.py  mc_eval.py
src/deep_learning_from_scratch_4/ch06/: q_learning.py  sampled_q_learning.py  sarsa.py  sarsa_off_policy.py  td_eval.py
src/deep_learning_from_scratch_4/ch07/: q_learning_nn.py  two_layer.ipynb  using_pytorch.ipynb
src/deep_learning_from_scratch_4/ch08/: cart_pole.ipynb  dqn.py  gym_play.py  replay_buffer.py
src/deep_learning_from_scratch_4/ch09/: policy_gradient.ipynb
