[project]
name = "deep-learning-from-scratch-4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shota shimizu", email = "shota.shimizu@legalontech.jp" }
]
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.3.0",
    "jupyterlab>=4.2.1",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_learning_from_scratch_4"]
