[project]
name = "deep-learning-from-scratch-4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shota shimizu", email = "shota.shimizu@legalontech.jp" }
]
dependencies = [
    "numpy",
    "torch",
    "jupyterlab",
    "matplotlib",
    "tqdm>=4.66.4",
    "typer",
    "gymnasium[atari]~=0.26.0",
]
readme = "README.md"
requires-python = ">= 3.10,<3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_learning_from_scratch_4"]
